# proj

./: Cargo.toml  LICENSE  README.md
demo/: demo.tape
src/: common.rs  config_file.rs  main.rs  mark.rs  projects.rs
src/app/: app.rs  app_state.rs  mod.rs  styles.rs
