[package]
name = "proj"
version = "0.1.0"
edition = "2021"
authors = ["Roy Varon Weinryb <varonroy@email.com>"]
repository = "https://github.com/varonroy/proj"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli"]
license-file = "LICENSE"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
tui = "0.19.0"
fuzzy-matcher = "0.3.7"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
home = "0.5.5"
crossterm = "0.23"
itertools = "0.10.5"

unicode-segmentation = "1.2"
unicode-width = "0.1"
once_cell = "1.17.1"

